docs(api/custom_templates): add types
